--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Web Elen</title>
+        <title>Home - Website</title>
     </head>
     <body>
-        <h2>ini adalah web untuk ekskul</h2>
-        <p>Hallo, ini adalah web pertama saya.</br>Saya peserta ekskul coding</p>
-        <p>Saya belajar HTML, CSS dan Javascript</p>
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html" class="active">Home</a>a></li> 
+                    <li><a href="#" class="active">Profile</a>a></li>
+                    <li><a href="#" class="active">Contact</a>a></li> 
+                    <li><a href="#" class="active">Latihan</a>a></li> 
+                </ul>
+            </nav> 
+        </header>
+
+      <main>
+          <section class="home">
+              <h1>Selamat Datang</h1>
+              <p>Ini adalah halaman Home</p>
+          </section> 
+      </main>  
+        <footer>
+            <p>&copy; 2025 My Website. All right reserved</p>
+        </footer>
     </body>
+    
 </html>
+
  
