--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html" class="active">Home</a>a></li> 
-                    <li><a href="#" class="active">Profile</a>a></li>
-                    <li><a href="#" class="active">Contact</a>a></li> 
-                    <li><a href="#" class="active">Latihan</a>a></li> 
+                    <li><a href="#" class="active">Profile</a></li>
+                    <li><a href="#" class="active">Contact</a></li> 
+                    <li><a href="#" class="active">Latihan</a></li> 
                 </ul>
             </nav> 
         </header>
@@ -29,3 +29,4 @@
 </html>
 
  
+
