--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <header>
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a>a></li> 
+                    <li><a href="index.html" class="active">Home</a></li> 
                     <li><a href="#" class="active">Profile</a></li>
                     <li><a href="#" class="active">Contact</a></li> 
                     <li><a href="#" class="active">Latihan</a></li> 
@@ -29,4 +29,5 @@
 </html>
 
  
+
 
